--- a/hallelujah.Rmd
+++ b/hallelujah.Rmd
@@ -14,11 +14,13 @@ The \GM baffled king com\Em -posing Halle\Am -lujah
 
 Halle\F -lujah, Halle\CM -lujah Halle\F -lujah, Halle \CM -lu\GM -\CM jah 
 
-Your faith was strong But you needed proof
+Your \CM  faith ~~was~~ **strong** 
+But you \Am needed [proof](https://utopian.io)
 
-You saw her bathing On the roof
+You \CM saw her bathing \Am On the roof
 
-Her beauty and the Moonlight overthrew you
+Her \F beauty and the Moonlight
+\CM overthrew you \GM
 
 She tied you to a kitchen chair
 
